--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- HEADER -->
     <header>
         <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="content">
-
-                    </div>
-                    <div class="content">
-                        
-                    </div>
-                </div>
+            <div class="nav">
+                <ul class="align-center">
+                    <li class="content"><img src="./css/img/logo-small.png" alt="logo"></li>
+                    <li class="content"><span>Perch&eacute; Dropbox</span></li>
+                    <li class="content"><span>Funzioni</span></li>
+                    <li class="content"><span>Piani e Prezzi</span></li>
+                </ul>
+            </div>
+            <div class="nav">
+                <ul class="align-center d-end">
+                    <li class="content d-end"><span>Supporto</span></li>
+                    <li class="content d-end"><span>Contatta l'ufficio vendite</span></li>
+                    <li class="content d-end"><span>Accedi</span></li>
+                    <li class="content d-end"><button class="start">inizia</button></li>
+                </ul>
             </div>
         </div>
     </header>
