--- a/index.html
+++ b/index.html
@@ -26,8 +26,27 @@
                     <li class="content d-end"><button class="start">inizia</button></li>
                 </ul>
             </div>
-        </div>
     </header>
-    
+    <main>
+        </div>
+        <div class="jumbotron">
+            <div class="container2">
+                <div class="content1">
+                    <h1>Tutto ci&oacute; che ti serve per il lavoro,in un unico posto</h1>
+                </div>
+                <div class="content2">
+                    <div class="blue">
+                        <p>Finalmente tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox business è pi&uacute; di uno spazio di archiviazione sicuro:è un modo intelligenti e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <button class="button b2">Inizia la tua prova gratutita</button>
+                        <span class="d-block">Annulla in qualsiasi momento</span>
+                        <span class="arrow d-block">&#129139;</span>
+                    </div>
+                    <div class="green">
+                        <img class="jumbo" src="./css/img/jumbo.png" alt="jumbo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
