complete business section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                                 <span>oppure <u>acquista ora</u></span>
                             </ul>
                         </div>
+                        <hr>
                         <div class="plan">
                             <span><strong>Punti Salienti del piano</strong></span>
                             <ul class="plan-list">
@@ -103,6 +104,7 @@
                                 <span>oppure <u>acquista ora</u></span>
                             </ul>
                         </div>
+                        <hr>
                         <div class="plan">
                             <span><strong>Punti Salienti del piano</strong></span>
                             <ul class="plan-list">
@@ -133,6 +135,7 @@
                                 <span>oppure <u>acquista ora</u></span>
                             </ul>
                         </div>
+                        <hr>
                         <div class="plan">
                             <span><strong>Punti Salienti del piano</strong></span>
                             <ul class="plan-list">
@@ -179,6 +182,55 @@
                 </div>
             </div>
         </div>
+        <div class="container3">
+            <div class="row-2">
+                <div class="col-100">
+                    <h2>Esegui pi&uacute; operazioni con Dropbox Business</h2>
+                </div>
+                <div class="col-33b">
+                    <div class="yellow">
+                        <img class="cover-skills" src="./css/img/business-feature-switching-tools.png" alt="business-future">
+                        <h5 class="title-skills">Passa di meno da uno strumento all'altro</h5>
+                        <p>Porta a termine le tue attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, fil Microsoft Office e Dropbox. Paper direttamente da dropbox</p>
+                    </div>
+                </div>
+                <div class="col-33b">
+                    <div class="yellow">
+                        <img class="cover-skills" src="./css/img/business-feature-send-files-it.png" alt="send-files">
+                        <h5 class="title-skills">Passa di meno da uno strumento all'altro</h5>
+                        <p>Porta a termine le tue attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, fil Microsoft Office e Dropbox. Paper direttamente da dropbox</p>
+                    </div>
+                </div>
+                <div class="col-33b">
+                    <div class="yellow">
+                        <img class="cover-skills" src="./css/img/business-feature-coordinate-it.png" alt="coordinate">
+                        <h5 class="title-skills">Passa di meno da uno strumento all'altro</h5>
+                        <p>Porta a termine le tue attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, fil Microsoft Office e Dropbox. Paper direttamente da dropbox</p>
+                    </div>
+                </div>
+                <div class="col-33b">
+                    <div class="yellow">
+                        <img class="cover-skills" src="./css/img/business-feature-integrations-it.png" alt="integrations">
+                        <h5 class="title-skills">Passa di meno da uno strumento all'altro</h5>
+                        <p>Porta a termine le tue attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, fil Microsoft Office e Dropbox. Paper direttamente da dropbox</p>
+                    </div>
+                </div>
+                <div class="col-33b">
+                    <div class="yellow">
+                        <img class="cover-skills" src="./css/img/business-feature-multi-device.png" alt="multi-device">
+                        <h5 class="title-skills">Passa di meno da uno strumento all'altro</h5>
+                        <p>Porta a termine le tue attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, fil Microsoft Office e Dropbox. Paper direttamente da dropbox</p>
+                    </div>
+                </div>
+                <div class="col-33b">
+                    <div class="yellow">
+                        <img class="cover-skills" src="./css/img/business-feature-security.png" alt="security">
+                        <h5 class="title-skills">Passa di meno da uno strumento all'altro</h5>
+                        <p>Porta a termine le tue attivit&aacute; quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, fil Microsoft Office e Dropbox. Paper direttamente da dropbox</p>
+                    </div>
+                </div>
+            </div>    
+        </div>        
     </main>
 </body>
-</html>2
+</html>
