chessboard completed with photo

--- a/index.html
+++ b/index.html
@@ -230,7 +230,51 @@
                     </div>
                 </div>
             </div>    
-        </div>        
+        </div>
+        <div class="container3">
+            <div class="width-60">
+                <h2 class="font-45">Pi&uacute;di 500.000 team utlizzano Dropbox Business</h2>
+                <u class="bottom-60">Scopri di pi&uacute; sui nostri clienti</u>
+            </div>
+        </div>  
+        <div class="container-full">
+            <div class="row-3">
+                <div class="col-33b">
+                    <div class="squares-content">
+                        <div class="square dimension c-green">
+                            <img class="team img1" src="./css/img/designit.svg" alt="designit">
+                        </div>
+                        <div class="square dimension c-red">
+                            <img class="team img1" src="./css/img/arizona_state_university.svg" alt="arizonauniversity">
+                        </div>
+                        <div class="square dimension c-blue">
+                            <img class="team img3" src="./css/img/university_of_florida.svg" alt="floridauniversity">
+                        </div>
+                        <div class="square dimension c-yellow">
+                            <img class="team img1" src="./css/img/topps.svg" alt="topps">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-33b"></div>
+                <div class="col-33b">
+                    <div class="squares-content">
+                        <div class="square dimension c-greenb">
+                            <img class="team img1" src="./css/img/world_bicycle_relief.svg" alt="worldbycycle">
+                        </div>
+                        <div class="square dimension c-redb">
+                            <img class="team img1" src="./css/img/hearst_corp.svg" alt="hearstcorp">
+                        </div>
+                        <div class="square dimension c-blueb">
+                            <img class="team img1" src="./css/img/lonely_planet.svg" alt="lonelyplanet">
+                        </div>
+                        <div class="square dimension c-yellowb">
+                            <img class="team img1" src="./css/img/clear_channel.svg" alt="clearchannel">
+                        </div>
+                    </div>
+                </div>
+            </div>    
+            </div>
+        </div>      
     </main>
 </body>
 </html>
