--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </div>  
         <div class="container-full">
             <div class="row-3">
-                <div class="col-33b">
+                <div class="col-33c">
                     <div class="squares-content">
                         <div class="square dimension c-green">
                             <img class="team img1" src="./css/img/designit.svg" alt="designit">
@@ -255,8 +255,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-33b"></div>
-                <div class="col-33b">
+                <div class="col-33c c-grey">
+                    <div class="margin-50 bottom-100">
+                        <h1 class="designit">Designit<div class="reg">&reg;</div></h1>
+                        <span class="company">a <b>wipro</b> company</span>
+                        <hr class="r2">
+                        <p style="font-size: 20px;">" i membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna &eacute; facile come Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+                        <span class="cit margin-25">Morten Thomsen, Global IT Lead</span>
+                    </div>
+                </div>
+                <div class="col-33c">
                     <div class="squares-content">
                         <div class="square dimension c-greenb">
                             <img class="team img1" src="./css/img/world_bicycle_relief.svg" alt="worldbycycle">
@@ -273,8 +281,31 @@
                     </div>
                 </div>
             </div>    
+        </div>
+        <div class="jumbotron">
+            <div class="container3-2 d-flex">
+                <h2 class="img1 font-red">Porta Dropbox Business nella tua azienda.</h2>
+                <button class="b-business">Inizia la tua prova gratuita</button>
             </div>
-        </div>      
+        </div> 
+        <div class="container3">
+            <div class="faq">
+                <h2>Domande frequenti</h2>
+            </div>
+            <div class="faq">
+                <span><strong>Qual' &eacute; la differenza tra Dropbox Business Standard e Drpbox Business Advanced?</strong></span>
+                <span><img class="downarrow" src="./css/img/down-arrow.png" alt="downarrow"></span>
+            </div>
+            <div class="faq">
+                <span><strong>Qual' &eacute; la differenza tra Dropbox Business Standard e Drpbox Business Advanced?</strong></span>
+                <span><img class="downarrow" src="./css/img/down-arrow.png" alt="downarrow"></span>
+            </div>
+            <div class="faq">
+                <span><strong>Qual' &eacute; la differenza tra Dropbox Business Standard e Drpbox Business Advanced?</strong></span>
+                <span><img class="downarrow" src="./css/img/down-arrow.png" alt="downarrow"></span>
+            </div>
+        </div>     
     </main>
+    
 </body>
 </html>
