--- a/index.html
+++ b/index.html
@@ -306,6 +306,67 @@
             </div>
         </div>     
     </main>
-    
+    <footer>
+        <div class="container2">
+            <div class="row-3">
+                <div class="col-20">
+                    <h5 class="title-foot white">Dropbox</h5>
+                    <ul class="foot-list padding-10 white">
+                        <li>Applicazione Desktop</li>
+                        <li>Perch&eacute; Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>funzioni</li>
+                    </ul>
+                    <hr class="hr-foot">
+                    <div class="languages">
+                        <ul>
+                            <li class="fontgrey"><img class="globe" src="./css/img/globe.png" alt="globe">Italiano&#9650;</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-20">
+                    <h5 class="title-foot white">Prodotti</h5>
+                    <ul class="plan-list padding-10 white">
+                        <li>Applicazione Desktop</li>
+                        <li>Perch&eacute; Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>funzioni</li>
+                    </ul>
+                </div>
+                <div class="col-20">
+                    <h5 class="title-foot white">Azienda</h5>
+                    <ul class="plan-list padding-10 white">
+                        <li>Applicazione Desktop</li>
+                        <li>Perch&eacute; Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>funzioni</li>
+                    </ul>
+                </div>
+                <div class="col-20">
+                    <h5 class="title-foot white">Supporto</h5>
+                    <ul class="plan-list padding-10 white">
+                        <li>Applicazione Desktop</li>
+                        <li>Perch&eacute; Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>funzioni</li>
+                    </ul>
+                </div>
+                <div class="col-20">
+                    <h5 class="title-foot white">Community</h5>
+                    <ul class="plan-list padding-10 white">
+                        <li>Applicazione Desktop</li>
+                        <li>Perch&eacute; Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>funzioni</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
